--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@nextui-org/input": "^2.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "flowbite-react": "^0.10.1",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
@@ -18,6 +20,7 @@
     "typescript": "5.3.3"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.30",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
